--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 anyio==3.6.2
+click==8.1.3
+colorama==0.4.6
 fastapi==0.95.1
+gunicorn==20.1.0
+h11==0.14.0
 idna==3.4
+joblib==1.2.0
 numpy==1.24.3
 pandas==2.0.1
 pydantic==1.10.7
@@ -14,4 +19,3 @@ typing_extensions==4.5.0
 tzdata==2023.3
 uvicorn==0.22.0
 xgboost==1.7.5
-joblib==1.2.0
